# LIFIMAGE-Projet

./: .gitignore  CMakeLists.txt  README.md  analyse.sh  synthese.sh
include/: Application.hpp  Array2D.hpp  MathematicalMorphology.hpp  utility.hpp
include/analyse/: Hull.hpp  MathematicalMorphology.hpp  uvec2.hpp
include/synthese/: Application.hpp  BVH.hpp  Hit.hpp  Light.hpp  Object.hpp  Ray.hpp  Scene.hpp  Vertex.hpp  mat4.hpp  transforms.hpp
lib/gkit3/projets/: tp1.cpp  tp2.cpp
lib/gkit3/src/: color.cpp  color.h  mesh_io.cpp
src/: Application.cpp  MathematicalMorphology.cpp  analyse.cpp  synthese.cpp  utility.cpp
src/analyse/: Hull.cpp  MathematicalMorphology.cpp  uvec2.cpp
src/synthese/: Application.cpp  BVH.cpp  BVH.hpp  Hit.cpp  Light.cpp  Object.cpp  Ray.cpp  Scene.cpp  Vertex.cpp  mat4.cpp  transforms.cpp
